--- a/polybar/config
+++ b/polybar/config
@@ -1089,7 +1089,7 @@ animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-foreground = #a3c725
-animation-charging-framerate = 750
+animation-charging-framerate = 500
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -1841,7 +1841,7 @@ format-prefix-foreground = #3EC13F
 format-underline = #3EC13F
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
-exec = python -u ~/.config/polybar/scripts/weather.py
+exec = python -u ~/.config/polybar/scripts/weather.py | cut -c1-50
 tail = true
 
 #################################################################################
